--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "this is daynamic backend file",
   "main": "app.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "hbs": "^4.2.0",
-    "mongoose": "^6.0.14"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.14",
+    "mongoose-unique-validator": "^3.0.0",
+    "nodemailer": "^6.7.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "nodemon app.js -e js,hbs"
+    "nodemon": "nodemon app.js -e js,hbs,css"
   },
   "keywords": [
     "daynamic_backend"
