--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "node ./app.js",
     "nodemon": "nodemon app.js -e js,hbs,css"
   },
   "keywords": [
